삭제 기능 구현 ( 그룹을 trash로 이동하는방식임 )

--- a/feature-main/src/main/res/values/strings.xml
+++ b/feature-main/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="main_empty_desc">데이터를\n추가해주세요</string>
     <string name="main_loading_desc">데이터를\n불러오는중입니다.</string>
+    <string name="main_delete_dialog_desc">삭제하시겠습니까?</string>
 </resources>
